[gd_scene load_steps=2 format=3 uid="uid://c3browser"]

[ext_resource type="Script" path="res://src/ui/components/browser/browser_panel.gd" id="1_browser"]

[node name="BrowserPanel" type="VBoxContainer"]
script = ExtResource("1_browser")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ViewToggle" type="HBoxContainer" parent="Toolbar"]
layout_mode = 2

[node name="GridViewButton" type="Button" parent="Toolbar/ViewToggle"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Grid"

[node name="ListViewButton" type="Button" parent="Toolbar/ViewToggle"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "List"

[node name="HSeparator" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="SortLabel" type="Label" parent="Toolbar"]
layout_mode = 2
text = "Sort:"

[node name="SortDropdown" type="OptionButton" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="Toolbar"]
layout_mode = 2
text = "Filter:"

[node name="FilterDropdown" type="OptionButton" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchBox" type="LineEdit" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
placeholder_text = "Search..."
clear_button_enabled = true

[node name="StatusLabel" type="Label" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "0 items"

[node name="ContentStack" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyState" type="CenterContainer" parent="ContentStack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="ContentStack/EmptyState"]
layout_mode = 2

[node name="Icon" type="Label" parent="ContentStack/EmptyState/VBox"]
layout_mode = 2
horizontal_alignment = 1
text = "ðŸ“"

[node name="Title" type="Label" parent="ContentStack/EmptyState/VBox"]
layout_mode = 2
horizontal_alignment = 1
text = "No folder selected"

[node name="Hint" type="Label" parent="ContentStack/EmptyState/VBox"]
layout_mode = 2
horizontal_alignment = 1
text = "Select a folder from the navigation panel
or add a watched folder via File > Add Watched Folder"

[node name="ScrollContainer" type="ScrollContainer" parent="ContentStack"]
layout_mode = 2
size_flags_vertical = 3

[node name="AssetGrid" type="GridContainer" parent="ContentStack/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 4
